# Master_FastAPI

./: .gitignore  Dockerfile  alembic.ini  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
fastapi_lesson/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastapi_lesson/routers/: auth.py  leftovers.txt  todos.py  users.py
fastapi_lesson/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
migrations/: env.py
migrations/versions/: 789b4e3d9c3e_create_initial_tables.py
