[project]
name = "newfastapi"
version = "0.1.0"
description = "Update FastAPI project"
authors = [
    {name = "jose-robertooliveira", email = "negroafrolife@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard]>=0.115.12,<0.116.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pytest>=8.3.5,<9.0.0",
    "mypy>=1.15.0,<2.0.0",
    "sqlalchemy[asyncio]>=2.0.41,<3.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
    "alembic>=1.16.1,<2.0.0",
    "pwdlib[argon2]>=0.2.1,<0.3.0",
    "tzdata>=2025.2,<2026.0",
    "pyjwt>=2.10.1,<3.0.0",
    "python-dotenv>=1.1.0",
    "pytest-asyncio>=1.0.0",
    "psycopg[binary]>=3.2.9",
    "asyncpg>=0.29.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.11,<1.0.0",
    "pytest-cov>=6.1.1,<7.0.0",
    "taskipy>=1.14.1,<2.0.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 95
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fastapi_lesson/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastapi_lesson -vv'
post_test = 'coverage html'

[tool.setuptools.packages.find]
include = ["fastapi_lesson*", "migrations*"]

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "freezegun>=1.5.2",
    "testcontainers>=4.10.0",
]
